# falgen

./: .gitignore  README.md  falgen.spec  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
npm/: package.json
src/falgen/: __init__.py  __main__.py  app.py  auth.py  config.py  context.py  preferences.py  session.py  tasks.py  widgets.py
src/falgen/commands/: __init__.py  base.py  builtins.py  cli_commands.py
src/falgen/providers/: __init__.py  openrouter.py
src/falgen/skills/: __init__.py  workflow_creation.md
src/falgen/tools/: __init__.py  ask_user.py  base.py  generate.py  history.py  info.py  leaderboard.py  pricing.py  search.py  skills.py  usage.py  workflows.py
tests/: test_auth.py  test_choice_menu.py  test_context.py  test_generate_tool.py  test_helpers.py  test_input_focus_guard.py  test_leaderboard.py  test_model_info.py  test_preferences.py  test_provider.py  test_session.py  test_terminal_garbage.py
