[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falgen"
version = "0.1.1"
description = "AI media generation from the terminal — powered by fal.ai"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ilkerzg" },
]
dependencies = [
    "textual>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
falgen = "falgen:main"

[tool.hatch.build.targets.wheel]
packages = ["src/falgen"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
